fix strange wrap bug with winning bid

--- a/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
+++ b/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
@@ -7,7 +7,6 @@
 .section h4 {
   font-family: 'PT Root UI';
   font-size: 18px;
-  line-height: 27px;
   color: var(--brand-cool-light-text);
 }
 
